@@ -1,3 +1,8 @@
+2012-11-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCast.c (decorateType): fixed bug #3577669
+	* support/regression/tests/gcc-torture-execute-20021010-1.c: reenabled
+
 2012-11-13 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* configure: added as8xcxxx to CONFIG_FILES
